--- a/Server/package.json
+++ b/Server/package.json
@@ -9,9 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-preset-env": "^1.7.0",
     "express": "^4.16.3",
     "expresss": "0.0.0",
+    "googleapis": "^27.0.0",
     "hbs": "^4.0.1",
+    "js-base64": "^2.4.9",
     "nodemon": "^1.18.4"
   }
 }
